feat+refactor: Add getting sales by product ID and split product and sale logics
