# src/routes/product.routes.ts
@@ -1,12 +1,15 @@
 import express from "express";
 import {
   deleteProductByIdController,
-  deleteSaleByIdController,
   getAllProductsController,
   getProductByIdController,
-  postNewSaleController,
   postProductController,
 } from "../controllers/product.controller";
+import {
+  deleteSaleByIdController,
+  getSalesByProductIdController,
+  postNewSaleController,
+} from "../controllers/sales.controller";
 
 const router = express.Router();
 
@@ -14,6 +17,7 @@ router.post("/", postProductController);
 router.get("/:id", getProductByIdController);
 router.delete("/:id", deleteProductByIdController);
 router.get("/", getAllProductsController);
+router.get("/:id/sales", getSalesByProductIdController);
 router.post("/:id/sales", postNewSaleController);
 router.delete("/:productId/sales/:saleId", deleteSaleByIdController);
 
